# BSTree_edit

./: .appveyor.yml  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangeLog.md  DESCRIPTION  DESCRIPTIONS.md  Dockerfile  Doxyfile 1.8.11  LICENSE  Makefile  README.md  annotated.html  appveyor.yml  build.sh  classBSTree_1_1Tree-members.html  classBSTree_1_1Tree.html  classes.html  cmake_install.cmake  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  log.txt  namespaceBSTree.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  structBSTree_1_1Node-members.html  structBSTree_1_1Node.html  structBSTree_1_1Node__coll__graph.dot  (+6 more)
4bin-init_crossdev_init-10_4repack&release_tests/: Makefile  tree-cli
4bin-init_crossdev_init-10_4repack&release_v10_all_ends/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  tree-cli
4bin-init_crossdev_init-10_4repack&release_v10_all_ends/_CPack_Packages/Linux/TGZ/tree-7.9.4.5v7-Linux/include/: tree.hpp
4bin-init_crossdev_init-7_4repack&release_v3/: CPackConfig.cmake  CPackSourceConfig.cmake
4bininit_crossdev_init-10_4repack&release_v10_all_ends/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
4bininit_crossdev_init-10_4repack&release_v10_all_ends/_CPack_Packages/Linux/TGZ/tree-7.9.4.5v7-Linux/cmake/: tree-config-coverage.cmake
4bininit_crossdev_init-10_4repack&release_v10_ends/: CMakeCache.txt  CPackSourceConfig.cmake
4bininit_crossdev_init-7_4repack&release_v3/: check  cmake_install.cmake
4bininit_crossdev_init-7_4repack&release_v3/_3rdParty/Hunter/: install-root-dir
4bininit_crossdev_init10_4repack&release_v10_ends/: CPackConfig.cmake  CTestTestfile.cmake  check
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  install_manifest.txt
_build/_CPack_Packages/Linux/DEB/: tree-0.1.1-Linux.deb
_build/_CPack_Packages/Linux/DEB/tree-0.1.1-Linux/: control  md5sums
_build1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build10/: CPackSourceConfig.cmake
_build11_actuall/: CPackConfig.cmake  CPackSourceConfig.cmake
_build3/: cmake_install.cmake
_build4/: CPackConfig.cmake  CPackSourceConfig.cmake
_build4/_CPack_Packages/Linux/DEB/tree-0.1.1-Linux/usr/include/: tree.hpp
_build5/: CPackSourceConfig.cmake
_build6/: CPackConfig.cmake  check
_build7/: CMakeCache.txt
_build8/: CPackConfig.cmake  check  cmake_install.cmake
_build9/: tree-cli
_builds/: CMakeCache.txt
cmake/: hunter.cmake
examples/: tree-cli.cpp
include/: tree.hpp
includes/: tree.hpp
logs/: log1.txt  log3.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js
sources/: .tree.hpp.swp  tree.cpp
tests/: .main.cpp.swp  .test1.cpp.swp  catch.hpp  main.cpp  test1.cpp  test2.cpp
